chore: add assets dir env var

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
 
       - id: build
         name: Build
+        env:
+          ASSETS_DIR: ./veeam-homework/assets
         run: pnpm run build
 
       - id: upload-artifact
